2005-12-22  Alex Roitman  <shura@gramps-project.org>
	* test/RunAllTests.py: Change header.
	* src/EventEdit.py: Fix build_ methods.

2005-12-22  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: window management improvements
	* src/EditPerson.py: window management improvements
	* src/EditPlace.py: window management improvements
	* src/EditSource.py: window management improvements
	* src/EventEdit.py: window management improvements
	* src/EventView.py: window management improvements
	* src/ListBox.py: window management improvements
	* src/NameEdit.py: window management improvements
	* src/SourceView.py: window management improvements
	* src/Sources.py: window management improvements

2005-12-22 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ImageSelect.py: changed display_refs to use find_backlink_handles and updated
	GlobalMediaProperties to use new UI model.
	* src/MediaView.py: changed call to GlobalMediaProperties to use new UI params.
	* src/Utils.py: added support for Gtk.labels to bold/unbold/temp label util funcs.

2005-12-22 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditPlace.py: changed display_references to use find_backlink_handles
	* src/EditRepository.py: modified to use  find_backlink_handles and fixed subtle bug
	* src/RelLib/_Source.py: added reporef_list to referent object lists so that backref 
	are put in reference_map
	* test/GrampsDb/GrampsDbBase_Test.py: added unittest for source/reference backlinks
	* test/GrampsDb/GrampsDbTestBase.py: added unittest for source/reference backlinks
	
2005-12-21  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: remove print statements
	* src/ViewManger.py: Fix const.app_* 
	* src/Bookmark.py: start of reimplementation
	* src/PersonView.py: commit fixes
	* src/GrampsDb/_GrampsBSDDB.py: refactor remove and id function

2005-12-21  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayState.py (remove_item): Add code to adjust other