@@ -1,6 +1,7 @@
 2005-12-22  Alex Roitman  <shura@gramps-project.org>
 	* test/RunAllTests.py: Change header.
 	* src/EventEdit.py: Fix build_ methods.
+	* src/MediaView.py: Skip empty selections.
 
 2005-12-22  Don Allingham  <don@gramps-project.org>
 	* src/DisplayState.py: window management improvements
